sites/all/themes/titan/local.css
/* ... */
.front .more-link {
  position: relative;
  width: 120px;
  left: 880px;
  bottom: 29px;
  line-height: 0;
  z-index: 6;
}

.front #block-views-events-block .more-link {
  position: static;
  margin: 10px 20px;
}

.front #block-views-events-block .more-link a {
  font-weight: bold;
}

.front .more-link a {
  color: rgb(255, 255, 255);
}

.front .views-slideshow-cycle-main-frame-row .views-field-nothing a {
  color: rgb(255, 255, 255);
}

.front #block-block-1 {
  margin-bottom: 20px;
  font-size: 14px;
  color: rgb(46, 73, 112);
}

.front .views-slideshow-controls-bottom {
  position: relative;
  width: 120px;
  bottom: 20px;
  z-index: 6;
  left: 750px;
}

.front .node-event {
  padding-top: 24px;
}

.front #header-menu-wrapper {
  margin-left: 0;
}

.front #block-views-events-block .views-row-odd,
.front #block-views-events-block_1 .views-row-odd {
  background-color: transparent;
}

.front #branding {
  display: block;
}

.front #block-block-1 div p {
  font-size: 120%;
}

.front #block-menu_block-1 {
  background-color: rgb(49, 72, 106);
  margin-top: 25px;
  padding: 5px;
  border-top: 3px solid rgb(133, 149, 40);
}

.front #main-wrapper {
  background-color: rgb(243, 244, 230);
}

#block-system-main .inner .view-taxonomy-term .caption p {
  display: none;
}

/*** NON-FRONT PAGES ***/

body.not-front {
  width: inherit;
}

#block-block-3 {
  padding: 15px 0 5px 15px;
  width: 960px;
  margin: 0 auto;
}

#block-block-3 img {
  margin-left: -6px;
}

.not-front #header-menu-wrapper {
  background-color: rgb(31, 56, 92);
}

.not-front #header-menu {
  background-color: rgb(31, 56, 92);
}

.not-front #header-menu #block-menu_block-1 {
  width: 960px;
  margin: 0 auto;
  margin-top: -40px;
  margin-bottom: 15px;
}

.not-front #header-menu #block-menu_block-1 ul {
  float: right;
}

.not-front #header-menu #block-menu_block-1 ul.menu {
  margin-right: -20px;
}

.not-front #header-menu #block-menu_block-1 ul.menu ul.menu {
  margin-left: 0;
}

.not-front #header-menu #block-menu_block-1 ul.menu ul.menu {
  margin-top: 1px;
}

.not-front #block-menu_block-1 ul.menu li {
  margin-top: -1px;
}

.not-front #block-menu_block-1 ul.menu li a {
  line-height: 24px;
  padding-bottom: 2px;
}

#block-menu_block-2 {
  clear: both;
  background-color: rgb(49, 72, 106);
}

#block-menu_block-2 .inner {
  width: 960px;
  margin: 0 auto;
}

#block-menu_block-2 ul li {
  float: left;
  border-right: 1px solid #bbbbbb;
}

#block-menu_block-2 ul li.last {
  border-right: none;
}

#block-menu_block-2 .content ul {
  margin: 5px -20px 5px 0;
  float: right;
}

#block-menu_block-2 .content ul li a {
  border: none;
  color: #ffffff;
  line-height: 8px;
}

#block-menu_block-2 .content ul li.active a {
  border: none;
  background-color: transparent;
}

#block-menu_block-2 .content ul li.active-trail a {
  color: rgb(193, 205, 145)
}

#block-menu_block-2 .content {
  background-color: rgb(49, 72, 106);
}

/*** BANNERS ***/

.not-front .node-banner .field-name-field-banner-image {
  float: none;
  background-color: transparent;
  border: none;
  padding: 0;
}

/*** RESEARCH HIGHLIGHTS ***/

.not-front #node-216 {
  margin-bottom: 0;
}

.not-front .node-research-highlight .field-name-field-media img {
  width: 300px;
  height: auto;
}

.not-front .node-featured-scientist .field-name-field-featured-scientist-media img {
  width: 300px;
  height: auto;
}

.not-front .node-research-highlight .field-name-field-media .field-item {
  margin-right: 30px;
  margin-bottom: 20px;
}

.not-front .node-featured-scientist .field-name-field-featured-scientist-media .field-item {
  margin-right: 30px;
  margin-bottom: 20px;
}

#block-system-main .inner .node-research-highlight .field-name-field-research-highlight-image .field-item,
#block-system-main .inner .node-featured-scientist .field-name-field-featured-scientist-image .field-item {
  margin-bottom: 20px;
}

.not-front .node-research-highlight .field-name-field-media,
.not-front .node-featured-scientist .field-name-field-featured-scientist-media {
  float: left;
  margin: 5px 15px 9px 0;
}

.not-front #block-system-main .inner .node-research-highlight .field-name-field-research-highlight-image,
.not-front #block-system-main .inner .node-featured-scientist .field-name-field-featured-scientist-image {
  margin-right: 30px;
  margin-bottom: 0;
  padding: 0;
  border: none;
  background-color: transparent;
}

.not-front #content h2,
.not-front #content h3,
.not-front #content h4 {
  color: rgb(46, 73, 112);
}

#block-menu-menu-research-menu {
  margin: 20px 0;
}

#block-menu-menu-research-menu ul {
  margin-left: 0;
}

#block-menu-menu-research-menu ul li {
  display: inline-block;
  padding-left: 0;
  background-image: none;
  margin: 0 4px 0 0;
}

#block-menu-menu-research-menu ul li a {
  display: block;
  padding: 5px 16px;
  color: #444444;
  border: 1px solid #d1cbb5;
  background-color: #f0ebe7;
}

#block-menu-menu-research-menu ul li a.active {
  background-color: #fbf9f8;
}

#block-menu-menu-research-menu ul li.active a {
  background-color: #fbf9f8;
}

#block-menu-menu-research-menu ul li a:active,
#block-menu-menu-research-menu ul li a:focus {
  background-color: #ffffff;
  outline: none;
}

#block-menu-menu-research-menu ul li a:hover {
  background-color: #ffffff;
}

#block-views-research_highlights-block_1 .field-name-body,
#block-views-research_highlights-block_1 .field-items,
#block-views-research_highlights-block_1 .field-item,
#block-views-research_highlights-block_1 p,
#block-views-research_highlights-block_1 .links-wrapper {
  display: inline;
}

/*** NEWS ***/

#field-news-related-people-add-more-wrapper, #field-news-related-resources-add-more-wrapper {
  margin: 25px 0;
}

#node-39 {
  margin-bottom: 0;
}

.not-front #block-system-main .inner .node-article .field-name-field-image {
  margin-right: 35px;
  margin-bottom: 20px;
  padding: 0;
  border: none;
  background-color: transparent;
}
/* ... */

